--- a/_posts/2015-01-02-second-entry.adoc
+++ b/_posts/2015-01-02-second-entry.adoc
@@ -1,6 +1,6 @@
 = First Entry
 :showtitle:
-:page-navtitle: First Entry
+:page-navtitle: Second Entry
 :page-excerpt: Excerpt goes here.
 :page-root: ../../../
 
